Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fcg-ingress
  namespace: fcg
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /users-api/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: fcg-users-svc
                port:
                  number: 80
          - path: /games-api/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: fcg-games-svc
                port:
                  number: 80
          # - path: /orders(/|$)(.*)
          #   pathType: ImplementationSpecific
          #   backend:
          #     service:
          #       name: fcg-orders-svc
          #       port:
          #         number: 80
          # - path: /payments(/|$)(.*)
          #   pathType: ImplementationSpecific
          #   backend:
          #     service:
          #       name: fcg-payments-svc
          #       port:
          #         number: 80
